--- a/IntramuralsSite/reactapp/src/App.css
+++ b/IntramuralsSite/reactapp/src/App.css
@@ -1,38 +1,23 @@
-.App {
+.header {
+  background-color: #00688B;
+}
+
+.header-text {
+  font-size: 30px;
+  color:white;
+  font-weight: bolder;
+  margin-left: 30px;
+}
+
+.navigation {
+  /*margin-left: 50px;*/
+  padding-bottom: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navigation-button {
+  font-size: 15px;
+  text-decoration: none;
+  color:white; 
+  margin-right: 10px;
 }
