--- a/IntramuralsSite/reactapp/src/App.css
+++ b/IntramuralsSite/reactapp/src/App.css
@@ -1,50 +1,61 @@
-.header {
-  background-color: #00688B;
-}
-
-.header-text {
-  font-size: 30px;
-  color:white;
-  font-weight: bolder;
-  margin-left: 30px;
-  float:left;
-}
-
-.navigation {
-  padding-bottom: 15px;
-  text-align: center;
-}
-
-.navigation-button {
-  font-size: 15px;
-  font-weight: bold;
-  text-decoration: none;
-  color:white; 
-  margin-right: 10px;
-}
-
 .button {
-  box-sizing: content-box;
-  margin-right: 20px;
-  padding: 5px 5px;
-  text-align: center;
   border-radius: 24px;
-  border-color: transparent;
-  background-color: white;
-  box-shadow: 0px 16px 60px rgba(78, 79, 114, 0.08);
-  position: absolute;
-  right: 0;
-
+  text-align: center;
 }
 
-.buttonText {
+.button-text {
   color: #4285f4;
   font-weight: bolder;
   font-size: 15px;
 }
 
-.icon {
-  height: 15px;
-  width: 15px;
-  margin-right: 5px;
+.title {
+  color: #00688B;
+  font-weight: bolder;
+  font-size: 50px;
+}
+
+.title-image {
+  width: 100px;
+  height:100px;
+  margin-left: 20px;
+}
+
+.login-text {
+  color: #00688B;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.right {
+  right: 0;
+}
+
+.left {
+  left: 0;
+}
+
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  align-content: center;
+}
+
+.centered img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
 }
