--- a/IntramuralsSite/reactapp/src/index.css
+++ b/IntramuralsSite/reactapp/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.sidenav {
+  height: 77%;
+  width: 25%;
+  position: fixed;
+  z-index: 1;
+  bottom: 20px;
+  right: 20px;
+  overflow-x: hidden;
+  padding-top: 20px;
+  padding-left: 20px;
+  border-radius:50px;
+  border: 2px solid;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sidenav-text{
+  text-align: center;
+}
+
+.main {
+  margin-right: 25%; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 170px 20px;
 }
