adminView switch button, modal for league form

--- a/IntramuralsSite/reactapp/src/sports.css
+++ b/IntramuralsSite/reactapp/src/sports.css
@@ -25,3 +25,14 @@
     margin: 20px;
     border: 1px solid #bbb;
 }
+
+.sportRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.adminSwitch {
+    float: right;
+}
+
