Passing URL Params

--- a/IntramuralsSite/reactapp/src/sports.css
+++ b/IntramuralsSite/reactapp/src/sports.css
@@ -24,3 +24,13 @@
     margin: 20px;
     border: 1px solid #bbb;
 }
+
+.teamlabel {
+    color: #00688B;
+    margin:30px;
+}
+
+.teamBox {
+    margin: 40px;
+    border: 1px solid #bbb;
+}
