--- a/IntramuralsSite/reactapp/src/index.css
+++ b/IntramuralsSite/reactapp/src/index.css
@@ -12,13 +12,36 @@
   text-align: center;
 }
 
-.sidenav-title{
+.sidenav-title {
   font-weight: bolder;
   font-size: 20px;
 }
 
+.post {
+	
+}
+
+.post-title {
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.post-date {
+	font-size: 20px;
+	float: right;
+}
+
+.post-text {
+	font-size: 20px;
+}
+
+.post-media {
+	max-height: 200px;
+	max-width: 200px;
+}
+
 .main {
-  margin-right: 25%; /* Same as the width of the sidenav */
+  margin-right: 30%; /* Same as the width of the sidenav */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 170px 20px;
 }
