--- a/IntramuralsSite/reactapp/src/style/modal.css
+++ b/IntramuralsSite/reactapp/src/style/modal.css
@@ -17,6 +17,24 @@
   	border-bottom-style: hidden;
 }
 
+.deleteHandler {
+	border-radius: 20px;
+	padding: 8px;
+	color: white;
+	font-weight: bolder;
+	background-color: #e50000;
+
+	outline: none;
+	border-top-style: hidden;
+  	border-right-style: hidden;
+  	border-left-style: hidden;
+  	border-bottom-style: hidden;
+}
+
+.editIcon {
+	float: right;
+}
+
 input[type=file]::-webkit-file-upload-button {
 	border: 2px solid #6c5ce7;
 	padding: .2em .4em;
