styling modals on sports page

--- a/IntramuralsSite/reactapp/src/style/modal.css
+++ b/IntramuralsSite/reactapp/src/style/modal.css
@@ -31,8 +31,23 @@
   	border-bottom-style: hidden;
 }
 
-.editIcon {
-	float: right;
+.left {
+    float: left;
+}   
+
+.right {
+    float: right;
+}
+
+.center {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.form-group {
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 input[type=file]::-webkit-file-upload-button {
