--- a/IntramuralsSite/reactapp/src/sports.css
+++ b/IntramuralsSite/reactapp/src/sports.css
@@ -1,6 +1,9 @@
-.title {
-    text-align:center;
+.sportTitle {
+    padding-left: 200px;
     padding-top: 170px;
+    color: #444444;
+    font-weight: bolder;
+    font-size: 50px;
 }
 
 .component-search-input input {
@@ -26,13 +29,92 @@
     border: 1px solid #bbb;
 }
 
-.sportRow {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #d3d3d3;
+  padding: 10px;
+}
+
+.grid-item {
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  
+}
+
+.logo {
+    max-height: 75px;
+    max-width: 75px;
+    padding-right: 25px;
 }
 
 .adminSwitch {
     float: right;
+    padding-right: 25px;
+    text-align: center;
+    font-weight: bold;
 }
 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
