--- a/IntramuralsSite/reactapp/src/index.css
+++ b/IntramuralsSite/reactapp/src/index.css
@@ -58,6 +58,7 @@ li span {
 
 .homeAdminTitle {
 	font-size: 20px;
+	padding-right: 15px;
 }
 
 .homeAdminSwitch {
@@ -112,9 +113,9 @@ input:focus + .homeSlider {
 }
 
 input:checked + .homeSlider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
 }
 
 /* Rounded sliders */
