fixed layout of add sport button

--- a/IntramuralsSite/reactapp/src/style/leagueForm.css
+++ b/IntramuralsSite/reactapp/src/style/leagueForm.css
@@ -4,7 +4,13 @@
     margin-top: 20px;
     margin-left: 10px;
 }
-
+.sportSpan {
+    display: flex;
+    flex-direction: row;
+    padding-left: 20px;
+    padding-bottom: 15px;
+    
+}
 .addLeague {
 	float: right;
 	padding-right: 10px;
