--- a/IntramuralsSite/reactapp/src/sports.css
+++ b/IntramuralsSite/reactapp/src/sports.css
@@ -10,20 +10,27 @@
     text-align: center;
 }
 .leagueTitle {
-    padding-top: 170px;
     padding-left: 200px;
     color: #444444;
     font-size: 50px;
     display: flex;
-    flex-direction: row;
+    
 
 }
 
 .editSpan {
     float: right;
-    width: 100%;
-    padding-right: 25px;
+    padding-right: 20px;
+    padding-bottom: 20px;
     
+}
+
+.work{
+    clear: both;
+}
+
+.paddingLeague {
+    padding-top: 170px;
 }
 
 .secondaryTitle {
