--- a/IntramuralsSite/reactapp/src/style/team.css
+++ b/IntramuralsSite/reactapp/src/style/team.css
@@ -10,7 +10,8 @@
 .secondaryTitle {
     padding-left:100px;
     color: #444444;
-    font-weight: bolder;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 .team_card{
@@ -29,6 +30,8 @@
 
 .profile_pic{
     padding-right:5px;
+    max-height: 50px;
+    max-width: 50px;
 }
 
 .player_cards{
