games are displayed after generation

--- a/IntramuralsSite/reactapp/src/style/GamesTab.css
+++ b/IntramuralsSite/reactapp/src/style/GamesTab.css
@@ -29,3 +29,13 @@
 .team-name {
     font-size: 25px;
 }
+
+.no-games-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.no-games {
+    text-align: center;
+}
