--- a/IntramuralsSite/reactapp/src/style/GamesTab.css
+++ b/IntramuralsSite/reactapp/src/style/GamesTab.css
@@ -30,6 +30,11 @@
     font-size: 25px;
 }
 
+.team-score {
+    font-size: 20px;
+    float: right;
+}
+
 .no-games-div {
     display: flex;
     flex-direction: column;
