--- a/IntramuralsSite/reactapp/src/style/teamstab.css
+++ b/IntramuralsSite/reactapp/src/style/teamstab.css
@@ -42,7 +42,7 @@
 .deleteTeam {
     border-radius: 20px;
     font-size: 13px;
-    padding: 6px;
+    padding: px;
     color: white;
     font-weight: bold;
     background-color: #e50000;
@@ -52,4 +52,10 @@
     border-right-style: hidden;
     border-left-style: hidden;
     border-bottom-style: hidden;
+}
+
+.no-team {
+  background-color: #d3d3d3;
+  padding-top: 20px;
+  text-align: center;
 }
