--- a/IntramuralsSite/reactapp/src/sports.css
+++ b/IntramuralsSite/reactapp/src/sports.css
@@ -83,6 +83,7 @@
   grid-template-columns: auto auto auto;
   background-color: #d3d3d3;
   padding: 10px;
+  grid-gap: 10px;
 }
 
 .grid-item {
@@ -91,6 +92,7 @@
   font-size: 20px;
   text-align: center;
   font-weight: bold;
+  border-radius: 20px;
 }
 
 .logo {
