--- a/IntramuralsSite/reactapp/src/style/GamesTab.css
+++ b/IntramuralsSite/reactapp/src/style/GamesTab.css
@@ -8,8 +8,15 @@
   color: white;
   text-align: center;
   border-radius: 20px;
+  transition: transform .5s;
+
 }
 
+.Collapsible__trigger:hover {
+  -ms-transform: scale(1.15); /* IE 9 */
+  -webkit-transform: scale(1.15); /* Safari 3-8 */
+  transform: scale(1.15); 
+}
 
 .game-grid-container {
     display: grid;
@@ -74,4 +81,8 @@
 .no-games-div {
     padding-top: 20px;
     text-align: center;
+}
+
+.bottomSpacing {
+  padding-bottom: 50px;
 }
