--- a/IntramuralsSite/reactapp/src/style/team.css
+++ b/IntramuralsSite/reactapp/src/style/team.css
@@ -55,7 +55,7 @@
 
 .captain-view {
     float: right;
-    padding-right: 35px;
+    padding-right: 20px;
 }
 
 .delete-team {
@@ -76,4 +76,10 @@
     float: right;
     padding-right: 40px;
     font-size: 18px;
+}
+
+.addPlayer {
+    float: right;
+    padding-right: 35px;
+    padding-bottom: 20px;
 }
