--- a/IntramuralsSite/reactapp/src/style/team.css
+++ b/IntramuralsSite/reactapp/src/style/team.css
@@ -72,6 +72,22 @@
     border-bottom-style: hidden;
 }
 
+.delete-player {
+    border-radius: 20px;
+    font-size: 15px;
+    padding: 5px;
+    color: white;
+    font-weight: bolder;
+    background-color: #e50000;
+    float: right;
+
+    outline: none;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+}
+
 .record {
     float: right;
     padding-right: 40px;
