--- a/IntramuralsSite/reactapp/src/style/profile.css
+++ b/IntramuralsSite/reactapp/src/style/profile.css
@@ -1,3 +1,29 @@
-.title {
-    padding-top: 140px;
+.beginning {
+    padding-top: 170px;
+}
+
+.primaryTitle {
+	padding-left:20px;
+    color: #444444;
+    font-weight: bolder;
+    font-size: 50px;
+}
+
+.record {
+	padding-left:100px;
+	font-weight: bold;
+	float: left;
+}
+
+.gameTitle {
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.userImage {
+	width: 75px;
+}
+
+.userTitle {
+	padding-left: 100px;
 }
